[gd_scene load_steps=7 format=3 uid="uid://ciyped0xtfru2"]

[ext_resource type="Script" path="res://Scripts/s_gameplay_level.gd" id="1"]
[ext_resource type="PackedScene" path="res://Scenes/SHealthBar.tscn" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/SPlayer.tscn" id="3"]
[ext_resource type="PackedScene" path="res://Scenes/SFixedEnemySpawner.tscn" id="4"]
[ext_resource type="PackedScene" path="res://Scenes/SFixedCoinsSpawner.tscn" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/SCoinsCounterUI.tscn" id="6"]

[node name="SLevel" type="Node2D"]
script = ExtResource("1")
s_player = ExtResource("3")
s_healthbar = ExtResource("2")
s_enemy_spawner = ExtResource("4")
s_coins_spawner = ExtResource("5")
s_coins_counter_ui = ExtResource("6")

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(105, 342)

[node name="Button" type="Button" parent="."]
offset_left = 129.0
offset_top = 87.0
offset_right = 275.0
offset_bottom = 130.0
text = "Complete Level"
icon_alignment = 1

[node name="Button2" type="Button" parent="."]
offset_left = 130.0
offset_top = 144.0
offset_right = 276.0
offset_bottom = 191.0
text = "Damage Player"

[node name="Button3" type="Button" parent="."]
offset_left = 133.0
offset_top = 203.0
offset_right = 279.0
offset_bottom = 250.0
text = "Reset coins"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
